--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
 
     <title>Expanding Search Bar 2</title>
-    <link rel="icon" type="image/png" href="Assets/ej-spade.ico">
+    <link rel="icon" type="image/png" href="Assets/emmanuel-jose.ico" />
     <link rel="stylesheet" href="style.css">
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
     <script src="https://kit.fontawesome.com/605695cfdb.js" crossorigin="anonymous"></script>
@@ -56,3 +56,5 @@
 </body>
 
 </html>
+
+<!-- Emmanuel Jose logo and favicon. © Emmanuel Jose. All Rights Reserved. -->
