--- a/index.html
+++ b/index.html
@@ -12,23 +12,12 @@
 	</head>
 
 	<body>
-		<a
-			href="https://github.com/emjose/expand-search-two/#header"
-			class="github-corner"
-			aria-label="View source on GitHub"
+		<a href="https://github.com/emjose/expand-search-two" class="github-corner" aria-label="View source on GitHub"
 			><svg
 				width="80"
 				height="80"
 				viewBox="0 0 250 250"
-				style="
-					fill: #322085;
-					color: #fff;
-					position: absolute;
-					top: 0;
-					border: 0;
-					left: 0;
-					transform: scale(-1, 1);
-				"
+				style="fill: #322085; color: #fff; position: absolute; top: 0; border: 0; right: 0"
 				aria-hidden="true"
 			>
 				<path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path>
