--- a/index.html
+++ b/index.html
@@ -3,7 +3,18 @@
 <html lang="en" dir="ltr">
 	<head>
 		<meta charset="utf-8" />
-
+		<meta property="og:title" content="Expanding Search Bar 2" />
+		<meta property="og:image" content="Assets/meta-004-expand-2.png" />
+		<meta
+			property="og:image:alt"
+			content="A search field line against a gradient background. Click to visit website."
+		/>
+		<meta property="og:description" content="Project by Emmanuel Jose" />
+		<meta property="og:url" content="https://emjose.github.io/expanding-cards/" />
+		<meta property="og:type" content="website" />
+		<meta name="twitter:card" content="summary" />
+		<meta name="keywords" content="HTML, CSS, JavaScript, expanding, search bar" />
+		<meta name="author" content="Emmanuel Jose" />
 		<title>Expanding Search Bar 2</title>
 		<link rel="icon" type="image/png" href="Assets/emmanuel-jose.ico" />
 		<link rel="stylesheet" href="style.css" />
@@ -12,7 +23,12 @@
 	</head>
 
 	<body>
-		<a href="https://github.com/emjose/expand-search-two" class="github-corner" aria-label="View source on GitHub"
+		<a
+			href="https://github.com/emjose/expand-search-two"
+			target="_blank"
+			rel="noopener noreferrer"
+			class="github-corner"
+			aria-label="View source on GitHub"
 			><svg
 				width="80"
 				height="80"
