update meta tags

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 			content="A search field line against a gradient background. Click to visit website."
 		/>
 		<meta property="og:description" content="Project by Emmanuel Jose" />
-		<meta property="og:url" content="https://emjose.github.io/expanding-cards/" />
+		<meta property="og:url" content="https://emjose.github.io/expand-search-two/" />
 		<meta property="og:type" content="website" />
 		<meta name="twitter:card" content="summary" />
 		<meta name="keywords" content="HTML, CSS, JavaScript, expanding, search bar" />
