update meta tag

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta property="og:title" content="Expanding Search Bar 2" />
-		<meta property="og:image" content="Assets/meta-004-expand-2.png" />
+		<meta property="og:image" content="https://emjose.github.io/expand-search-two/Assets/meta-004-expand-2.png" />
 		<meta
 			property="og:image:alt"
 			content="A search field line against a gradient background. Click to visit website."
@@ -17,6 +17,7 @@
 		<meta name="author" content="Emmanuel Jose" />
 		<title>Expanding Search Bar 2</title>
 		<link rel="icon" type="image/png" href="Assets/emmanuel-jose.ico" />
+		<link rel="canonical" href="https://emjose.github.io/expand-search-two/" />
 		<link rel="stylesheet" href="style.css" />
 		<script src="https://code.jquery.com/jquery-3.5.1.js"></script>
 		<script src="https://kit.fontawesome.com/605695cfdb.js" crossorigin="anonymous"></script>
