--- a/index.html
+++ b/index.html
@@ -12,11 +12,17 @@
 		<meta property="og:url" content="https://emjose.github.io/expand-search-two/" />
 		<meta property="og:type" content="website" />
 		<meta name="twitter:card" content="summary" />
+		<meta name="description" content="An expanding search field demo. Click to visit website." />
+		<meta name="theme-color" content="#FFFFFF" />
 		<meta name="keywords" content="HTML, CSS, JavaScript, expanding, search bar" />
 		<meta name="author" content="Emmanuel Jose" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Expanding Search Bar 2</title>
 		<link rel="icon" type="image/png" href="Assets/emmanuel-jose.ico" />
+		<link rel="apple-touch-icon" sizes="180x180" href="Assets/apple-touch-icon.png" />
+		<link rel="icon" type="image/png" sizes="32x32" href="Assets/favicon-32x32.png" />
+		<link rel="icon" type="image/png" sizes="16x16" href="Assets/favicon-16x16.png" />
+		<link rel="manifest" href="manifest.webmanifest" />
 		<link rel="canonical" href="https://emjose.github.io/expand-search-two/" />
 		<link rel="stylesheet" href="style.css" />
 		<script src="https://code.jquery.com/jquery-3.5.1.js"></script>
